...
import java.util.Locale

const val LONGITUDE_DEFAULT = 0.0
const val LATITUDE_DEFAULT = 0.0

object AddEventPopUpTestTags {
  const val INPUT_EVENT_TITLE = "inputEventTitle"
  const val PICK_EVENT_DATE = "pickEventDate"
  const val PICK_EVENT_TIME = "pickEventTime"
  const val INPUT_EVENT_DESCRIPTION = "inputEventDescription"
  const val INPUT_EVENT_TAG = "inputEventTag"
  const val INPUT_EVENT_LOCATION = "inputEventLocation"
  const val EVENT_CANCEL = "eventCancel"
  const val EVENT_SAVE = "eventSave"
  const val ERROR_MESSAGE = "errorMessage"

  const val PUBLIC_SWITCH = "publicSwitch"

  const val PUBLIC_TEXT = "publicText"

  const val POPUP = "AddEventPopUp"
}

/**
 * A reusable text field composable used in the Add Event dialog.
...
              Spacer(modifier = Modifier.padding(10.dp))
              Column(
                  horizontalAlignment = Alignment.CenterHorizontally,
                  modifier = Modifier.fillMaxWidth().verticalScroll(rememberScrollState())) {
                    Row(modifier = Modifier.fillMaxWidth()) {
                      IconButton(onClick = onBack, Modifier.padding(start = 10.dp).size(25.dp)) {
                        Icon(imageVector = Icons.Filled.Close, contentDescription = "Close")
                      }
                      Spacer(modifier = Modifier.padding(10.dp))
                      Text(stringResource(R.string.event_creation_title), fontSize = 20.sp)
                    }
                    Spacer(modifier = Modifier.padding(5.dp))
                    Text(
...
