...
import com.swent.mapin.model.location.Location
import com.swent.mapin.model.location.LocationViewModel
import java.text.SimpleDateFormat
import java.util.Locale

object AddEventScreenTestTags : EventScreenTestTag {
  override val INPUT_EVENT_TITLE = "inputEventTitle"
  override val INPUT_EVENT_DESCRIPTION = "inputEventDescription"
  override val INPUT_EVENT_TAG = "inputEventTag"
  const val INPUT_EVENT_CAPACITY = "inputEventCapacity"

  override val EVENT_CANCEL = "eventCancel"
  override val EVENT_SAVE = "eventSave"
  override val ERROR_MESSAGE = "errorMessage"

  override val PICK_EVENT_DATE = "pickEventDate"
  override val PICK_END_DATE = "pickEventEndDate"
  override val PICK_EVENT_TIME = "pickEventTime"
  override val PICK_END_TIME = "pickEventEndTime"
  override val INPUT_EVENT_LOCATION = "inputEventLocation"
  const val INPUT_EVENT_PRICE = "inputEventPrice"

  const val PUBLIC_SWITCH = "publicSwitch"

  const val PUBLIC_TEXT = "publicText"

  const val SCREEN = "AddEventScreen"

  override val PICK_MEDIA = "mediaPicker"
}

...
